# HRBoost-back-end

./: .gitignore  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  readm.md  requirements.txt
HRBoost/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  users.py  views.py
HRBoost/migrations/: 0001_initial.py  0002_alter_rolepermission_role_id.py  0002_auto_20210926_1832.py  0002_getpermissions.py  0003_auto_20210927_1153.py  0003_auto_20210928_0952.py  0004_alter_attendance_check_out.py  0004_auto_20210929_1234.py  0005_blog.py  0006_alter_userinfo_gender.py
accounts/: forms.py
accounts/migrations/: 0001_initial.py
custom_user_project/: settings.py  urls.py
login/: admin.py  models.py  serializers.py  urls.py  views.py
login/migrations/: 0001_initial.py
profok/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
users/: models.py  tests.py
users /: admin.py  urls.py
users /migrations/: 0001_initial.py
users/migrations/: 0001_initial.py
