[tool.poetry]
name = "final-project-back-end"
version = "0.1.0"
description = ""
authors = ["hayabalasmeh <hmbalasmeh@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
