[tool.poetry]
name = "final-project-back-end"
version = "0.1.0"
description = ""
authors = ["hayabalasmeh <hmbalasmeh@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.8.0"
django-cors-headers = "^3.8.0"
psycopg2-binary = "^2.9.1"
fire = "^0.4.0"
requests = "^2.26.0"
django-environ = "^0.7.0"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
